<resources>
    <string name="app_name">calc</string>

    <string name="oneText">1</string>
    <string name="twoText">2</string>
    <string name="threeText">3</string>
    <string name="fourText">4</string>
    <string name="fiveText">5</string>
    <string name="sixText">6</string>
    <string name="sevenText">7</string>
    <string name="eightText">8</string>
    <string name="nineText">9</string>
    <string name="zeroText">0</string>

    <string name="parethesesLeftText">(</string>
    <string name="parethesesRightText">)</string>
    <string name="multiplyText">×</string>
    <string name="negativeText">-</string>
    <string name="positiveText">+</string>
    <string name="equalsText">=</string>
    <string name="devideText">÷</string>
    <string name="dotText">.</string>
    <string name="clearText">C</string>
    <string name="backspaceText"> </string>

    <string name="fieldText">Enter a Value</string>

    <string name="SinText">sin</string>
    <string name="CosText">cos</string>
    <string name="TanText">tan</string>
    <string name="ArcSinText">arcsin</string>
    <string name="ArcCosText">arccos</string>
    <string name="ArcTanText">arctan</string>
    <string name="LogText">log</string>
    <string name="LnText">ln</string>
    <string name="SquareText">√</string>
    <string name="AbsText">|x|</string>
    <string name="piText">π</string>
    <string name="eText">e</string>
    <string name="XSquaredText">x<sup><small>2</small></sup></string>
    <string name="XPowerYText">x<sup><small>y</small></sup></string>

</resources>