<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/displayEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/fieldText"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textColorHint="@color/greyAccent"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button31"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="zeroBTNPush"
            android:text="@string/zeroText"
            android:textColor="@color/tanAccent"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/button29"
            app:layout_constraintStart_toStartOf="@+id/button27"
            app:layout_constraintTop_toBottomOf="@+id/button27" />

        <Button
            android:id="@+id/button34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/equals_button_background"
            android:onClick="equalsBTNPush"
            android:text="@string/equalsText"
            android:textColor="@color/tanAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button32"
            app:layout_constraintTop_toBottomOf="@+id/button30" />

        <Button
            android:id="@+id/button32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="dotBTNPush"
            android:text="@string/dotText"
            android:textColor="@color/tanAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button31"
            app:layout_constraintTop_toBottomOf="@+id/button29" />

        <Button
            android:id="@+id/button27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="oneBTNPush"
            android:text="@string/oneText"
            android:textColor="@color/tanAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button23" />

        <Button
            android:id="@+id/button29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="twoBTNPush"
            android:text="@string/twoText"
            android:textColor="@color/tanAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button27"
            app:layout_constraintTop_toBottomOf="@+id/button25" />

        <Button
            android:id="@+id/button30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:onClick="multiplyBTNPush"
            android:text="@string/multiplyText"
            android:textColor="@color/tanAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button28"
            app:layout_constraintTop_toBottomOf="@+id/button26" />

        <Button
            android:id="@+id/button28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="threeBTNPush"
            android:text="@string/threeText"
            android:textColor="@color/tanAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button29"
            app:layout_constraintTop_toBottomOf="@+id/button24" />

        <Button
            android:id="@+id/button23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="fourBTNPush"
            android:text="@string/fourText"
            android:textColor="@color/tanAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button19" />

        <Button
            android:id="@+id/button25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="fiveBTNPush"
            android:text="@string/fiveText"
            android:textColor="@color/tanAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button23"
            app:layout_constraintTop_toBottomOf="@+id/button21" />

        <Button
            android:id="@+id/button26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:onClick="positiveBTNPush"
            android:text="@string/positiveText"
            android:textColor="@color/tanAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button24"
            app:layout_constraintTop_toBottomOf="@+id/button22" />

        <Button
            android:id="@+id/button24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="sixBTNPush"
            android:text="@string/sixText"
            android:textColor="@color/tanAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button25"
            app:layout_constraintTop_toBottomOf="@+id/button20" />

        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="sevenBTNPush"
            android:text="@string/sevenText"
            android:textColor="@color/tanAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button18" />

        <Button
            android:id="@+id/button21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="eightBTNPush"
            android:text="@string/eightText"
            android:textColor="@color/tanAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/button16" />

        <Button
            android:id="@+id/button22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:onClick="negativeBTNPush"
            android:text="@string/negativeText"
            android:textColor="@color/tanAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button20"
            app:layout_constraintTop_toBottomOf="@+id/button15" />

        <Button
            android:id="@+id/button20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="nineBTNPush"
            android:text="@string/nineText"
            android:textColor="@color/tanAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button21"
            app:layout_constraintTop_toBottomOf="@+id/button17" />

        <Button
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/clear_button_background"
            android:onClick="clearBTNPush"
            android:text="@string/clearText"
            android:textColor="@color/tanAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button35" />

        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/clear_button_background"
            android:onClick="parenthesesRightBTNPush"
            android:text="@string/parethesesRightText"
            android:textColor="@color/tanAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button16"
            app:layout_constraintTop_toBottomOf="@+id/button35" />

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/clear_button_background"
            android:onClick="parenthesesLeftBTNPush"
            android:text="@string/parethesesLeftText"
            android:textColor="@color/tanAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button18"
            app:layout_constraintTop_toBottomOf="@+id/button35" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:onClick="devideBTNPush"
            android:text="@string/devideText"
            android:textColor="@color/tanAccent"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button17"
            app:layout_constraintTop_toBottomOf="@+id/button35" />

        <ImageButton
            android:id="@+id/button35"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/backspaceText"
            android:onClick="backspaceBTNPush"
            android:textColor="@color/tanAccent"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/button15"
            app:layout_constraintStart_toStartOf="@+id/button15"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backspace"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>